# python-api-azure

./: README.md  app.py  azure-app-delete.sh  azure-app.sh  azure-authenticate.sh  azure-cosmodb.sh  azure-cosmosdb-connection-string.sh  azure-deploy-old.sh  azure-deploy.sh  azure-rg.sh  env-azure.sh  env-local.sh  install.sh  pyproject.toml  requirements.txt  sample-usage.md  simple-app.py  startup.sh
app/: main.py  pytest.ini
app/server/: app.py  database.py
app/server/models/: common.py  config.py  drop.py  events.py  firmware.py  pschit.py  versions.py
app/server/routes/: config.py  events.py  firmware.py  pschit.py  versions.py
app/tests/: conftest.py  test_config.py  test_events.py  test_firmware.py  test_versions.py  testing_utils.py
docs/: everie.postman_collection.json
functional_tests/: config_endpoint.sh  events_endpoint.sh  get_token.sh  versions_endpoint.sh
sql/: WideWorldImportersUpdates.sql
